# Shark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  gen_sf_data.py  spsa.py  train_nnue.py
docs/: ARCHITECTURE.md  IMPROVING.md  RELEASING.md  TRAINING.md
src/: eval.rs  lib.rs  main.rs  nnue.rs  search.rs  uci.rs  zobrist.rs
trainer-burn/src/: main.rs
web/: index.html
